# RAG_MODEL

./: .env  pyproject.toml  requirements.txt
data/text_files/: python_intro.txt
data/vector_store/: chroma.sqlite3
notebook/: document.ipynb  pdf_loader.ipynb
